create_pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rec-http
  labels:
    k8s-app: rec-http
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: rec-http
  template:
    metadata: 
      labels:
        k8s-app: rec-http
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: nvidia.com/gpu.product
                operator: In
                values:
                - NVIDIA-GeForce-RTX-3090
      containers:
      - name: rec-pod
        image: mehir123/recommeddit:latest
        command: ['sh', '-c', 'gunicorn -b 0.0.0.0:8000 --workers 1 --preload --worker-class=uvicorn.workers.UvicornWorker main:app']
        resources:
           limits:
             memory: 10Gi
             cpu: 2
             nvidia.com/gpu: 1  
           requests:
             memory: 10Gi
             cpu: 2
             nvidia.com/gpu: 1
