create_spacy_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spacy-pod
  namespace: recommeddit
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: nvidia.com/gpu.product
            operator: In
            values:
            - NVIDIA-GeForce-RTX-3090
  containers:
  - name: spacy-pod
    image: mehir123/recommeddit:latest
    command: ["sh", "-c", "uvicorn main:app"]
    resources:
      limits:
        memory: 12Gi
        cpu: 2
        nvidia.com/gpu: 1
      requests:
        memory: 12Gi
        cpu: 2
        nvidia.com/gpu: 1
