create_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: rec-svc
  name: rec-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    k8s-app: rec-http
  type: ClusterIP
